--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.0",
-    "yup": "^1.3.2"
+    "yup": "^1.4.0"
   },
   "engines": {
     "node": ">=16.x",
